--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -1,4 +1,9 @@
 
+<div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h4 class="modal-title" id="myModalLabel">Task</h4>
+  </div>
+  <div class="modal-body">
 <%= form_for([@todo_list, @todo_list.todo_items.build]) do |f| %>
  	<div class="row">
 	 	<div class="col-sm-3">
@@ -15,3 +20,5 @@
 		</div>
 	</div>
  <% end %><br>
+
+</div>
