--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 @import "font-awesome";
 @import "animate";
 
+
 body {
   color: #5D5F63;
   background: #F0F1F6;
@@ -44,6 +45,7 @@ a:active {
   outline: none;
   text-decoration: none;
   color: #16a086;
+  background-color: transparent;
 }
 h1,
 h2,
