--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -12,7 +12,7 @@
                     </div>
                 </div>
          <div class="row">
-          <div class="col-md-10 col-md-offset-1">
+          <div class="col-md-12">
               <div class="panel panel-default">
                     <div class="panel-heading">
                       <h3 class="panel-title">Create a task</h3>
@@ -24,7 +24,7 @@
            </div>
         </div>
         <div class="row">
-          <div class="col-md-10 col-md-offset-1">
+          <div class="col-md-12">
               <span style="color: #9eafba;text-decoration: none;font-size: 1.5em;"><i class="fa fa-tag fa-1x"> Filter :</i></span>
               
               <span class="btn btn-primary btn-sm"><%= link_to "All", todo_list_path(@todo_list), :style=>'color:#FFFFFF;' %></span>
@@ -42,7 +42,7 @@
 
 
         <div class="row">
-          <div class="col-md-10 col-md-offset-1">
+          <div class="col-md-12">
               <div class="panel panel-default">
                     
                     <div class="panel-body">
@@ -67,7 +67,7 @@
                                             
                                             
                                               <td style="vertical-align: middle;opacity:0.4"><strike><%= todo_item.content %></strike></td> 
-                                              <td width="10%" style="vertical-align: middle;opacity:0.4"><strike><%= todo_item.deadline.strftime('%v') %></strike></td> 
+                                              <td width="10%" style="vertical-align: middle;opacity:0.4"><strike><%= todo_item.deadline%></strike></td> 
                                               <td width="30%" style="vertical-align: middle;opacity:0.4" ><strike><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></strike></td>
                                            
                                             
@@ -80,7 +80,7 @@
                                          
                                            
                                              <td style="vertical-align: middle;"><%= todo_item.content %></td> 
-                                              <td width="10%" style="vertical-align: middle;"><%= todo_item.deadline.strftime('%v') %></td> 
+                                              <td width="10%" style="vertical-align: middle;"><%= todo_item.deadline %></td> 
                                               <td width="30%" style="vertical-align: middle;" ><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></td>
                                            
                                             
