--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -1,11 +1,11 @@
 
 <%= form_for([@todo_list, @todo_list.todo_items.build]) do |f| %>
- 	<div class="row">
+ 	<div  class="row">
 	 	<div class="col-sm-3">
 			<%= f.text_field :content, placeholder: "new Todo", :class=>"form-control" %>
 		</div>
-		<div class="col-sm-3">
-			<%= f.text_field :deadline, placeholder: "deadline", data:{ provide:'datepicker'}, :class=>"form-control" %>
+		<div id="sandbox-container" class="col-sm-3">
+			<%= f.text_field :deadline, placeholder: "deadline", data:{ provide:'datepicker', date:{format:"dd/mm/yyyy"}}, :class=>"form-control" %>
 		</div>
 		<div class="col-sm-3">
 			<%= f.text_field :tag_list,placeholder: "Tags seperated by commas", :class=>"form-control" %>
