--- a/app/views/todo_lists/edit.js.erb
+++ b/app/views/todo_lists/edit.js.erb
@@ -1,2 +1,2 @@
-$("#modal-edit").find(".modal-content").html("<%= j (render 'todo_items/form') %>");
-$("#modal-edit").modal('show');
+$("#modal-edit_list").find(".modal-content").html("<%= j (render 'todo_lists/form') %>");
+$("#modal-edit_list").modal('show');
