--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -22,7 +22,7 @@
                                         <td width="10%" style="vertical-align: middle;text-align:center;"><%= todo_list.created_at.strftime('%v') %></td>
                                         <td width="15%" style="vertical-align: middle;text-align:center;">Completion with :<div class="progress"><div class="progress-bar progress-bar-primary" style="width: 20%">20%</div></div></td>
                                         <td width="5%" style="vertical-align: middle;text-align:center;"><%= link_to todo_list,data: { turbolinks: false }, :class => "btn btn-primary" do %><i class="fa fa-search"> Show</i><% end %></td>
-                                        <td width="5%" style="vertical-align: middle;text-align:center;"><%= link_to edit_todo_list_path(todo_list), :class => "btn btn-default" do %><i class="fa fa-edit"> Edit</i><% end %></td>
+                                        <td width="5%" style="vertical-align: middle;text-align:center;"><%= link_to edit_todo_list_path(todo_list),{:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit_list',:class => "btn btn-default"} do %><i class="fa fa-edit"> Edit</i><% end %></td>
                                         <td width="5%" style="vertical-align: middle;text-align:center;"><%= link_to todo_list, method: :delete, data: { confirm: 'Are you sure?'}, :class => "btn btn-danger", :style=>'color:#FFFFFF;' do %><i class="fa fa-trash-o"> Delete</i><% end %></td>
                                       </tr>
                                     <% end %>
@@ -41,6 +41,13 @@
  <!--main content end-->
          <!-- Basic Modal -->
     <div id="modal-new" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+
+        </div>
+      </div>
+  </div>
+   <div id="modal-edit_list" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
 
