--- a/app/views/todo_items/edit.js.erb
+++ b/app/views/todo_items/edit.js.erb
@@ -1,2 +1,2 @@
-$("#modal-edit").find(".modal-content").html("<%= j (render 'todo_items/form') %>");
+$("#modal-edit").find(".modal-content").html("<%= j (render 'todo_items/form_edit') %>");
 $("#modal-edit").modal('show');
