--- a/app/views/indicators/index.html.erb
+++ b/app/views/indicators/index.html.erb
@@ -4,8 +4,11 @@
 										<% @kpis.each.with_index do |kpi, index| %>
 											<div class="col-md-3 col-sm-6">
 												<div class="dashboard-tile detail tile-<%= kpi.color %>">
-													<div class="content">
-														<% if current_user.admin? %>
+													<div class="pull-right">
+														<p style="font-size:0.7em;">Updated at: <%= kpi.updated_at.strftime('%v') %></p>
+													</div>
+													<div class="pull-left">
+													<% if current_user.admin? %>
 															<div class="btn-group">
 															    <button type="button" class="btn btn-default btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
 															          <i class="fa fa-cog"></i><span class="caret"></span>
@@ -18,6 +21,9 @@
 															      </ul>
 															</div>
 														<% end %>
+													</div>
+													<div class="content">
+														
 														<h1 class="text-left timer" data-speed="2500" data-to="180" data-from="0">
 															<%= kpi.datum %>
 														</h1>
@@ -25,9 +31,6 @@
 													</div>
 													<div class="icon">
 														<i class="fa fa-warning"></i>
-													</div>
-													<div class="pull-right">
-														<p style="font-size:0.7em;">Updated at: <%= kpi.updated_at.strftime('%v') %></p>
 													</div>
 													
 												</div>
