--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -8,7 +8,7 @@
 			<%= f.text_field :deadline, placeholder: "deadline", data:{ provide:'datepicker', date:{format:"dd/mm/yyyy"}}, :class=>"form-control" %>
 		</div>
 		<div class="col-sm-3">
-			<%= f.text_field :tag_list,placeholder: "Tags seperated by commas", :class=>"form-control" %>
+			<%= f.text_field :tag_list, placeholder: "new Todo", :class=>"form-control" %>
 		</div>
 		<div class="col-sm-3">
 			<%= f.submit :class=>"btn btn-primary btn-block" %></span>
