--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,9 @@
  *= require bootstrap.min
  *= require jquery-ui
  *= require bootstrap-datepicker
+ *= require bootstrap-typeahead-rails
  *= require dataTables/jquery.dataTables
+  *= require chosen
  *= require_self
 
  */
