--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -66,7 +66,7 @@
                                             
                                             
                                               <td style="vertical-align: middle;opacity:0.4"><strike><%= todo_item.content %></strike></td> 
-                                              <td width="10%" style="vertical-align: middle;opacity:0.4"><strike><%= todo_item.deadline.strftime('%v') %></strike></td> 
+                                              <td width="10%" style="vertical-align: middle;opacity:0.4"><strike><%= todo_item.deadline %></strike></td> 
                                               <td width="30%" style="vertical-align: middle;opacity:0.4" ><strike><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></strike></td>
 
                                                <td width="5%" style="vertical-align: middle;">
@@ -89,7 +89,7 @@
                                          
                                            
                                               <td style="vertical-align: middle;"><%= todo_item.content %></td> 
-                                              <td width="10%" style="vertical-align: middle;"><%= todo_item.deadline.strftime('%v')  %></td> 
+                                              <td width="10%" style="vertical-align: middle;"><%= todo_item.deadline %></td> 
                                               <td width="30%" style="vertical-align: middle;" ><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></td>
                                               <td width="5%" style="vertical-align: middle">
                                                   <div class="btn-group">
@@ -139,6 +139,7 @@
     "bLengthChange": false,
     "bFilter": true,
     "bInfo": false,
+    "order": [[ 2, "asc" ]],
     "bAutoWidth": false });
     } );
   </script>
