--- a/app/views/indicators/index.html.erb
+++ b/app/views/indicators/index.html.erb
@@ -60,7 +60,7 @@
 							                    <div class="col-md-6">
 							                        <div class="panel panel-default">
 							                            <div class="panel-heading">
-							                                <h5 class="panel-title">HR</h5>
+							                                <h5 class="panel-title"><%= indicator.category.name %></h5>
 							                                <div class="actions pull-right">
 							                                	<% if current_user.admin? %>
 							                                	<div class="btn-group">
@@ -93,7 +93,7 @@
 							                    <div class="col-md-6">
 							                        <div class="panel panel-default">
 							                            <div class="panel-heading">
-							                                <h5 class="panel-title">HR</h5>
+							                                <h5 class="panel-title"><%= indicator.category.name %></h5>
 							                                <div class="actions pull-right">
 							                                	<% if current_user.admin? %>
 							                                	<div class="btn-group">
