--- a/app/views/indicators/index.html.erb
+++ b/app/views/indicators/index.html.erb
@@ -2,7 +2,8 @@
 	<section id="main-content">
 		 <div class="row">
 		 	<div class="col-md-12">
-		 		<%= link_to "All", indicators_path(category: ""), :class => "btn btn-primary" %>
+		 		<span style="color: #9eafba;text-decoration: none;font-size: 1.5em;"><i class="fa fa-tag fa-1x"> Filter :</i></span>
+		 		<%= link_to "All", indicators_path, :class => "btn btn-primary" %>
 			 	<% Category.all.each do |category| %>
 			 		<%= link_to category.name, indicators_path(category: category.name), :class => "btn btn-primary" %>
 			 	<% end %>
