--- a/app/views/documentations/index.html.erb
+++ b/app/views/documentations/index.html.erb
@@ -1,7 +1,16 @@
 
   <section class="main-content-wrapper">
             <section id="main-content">
-          
+                 <div class="row">
+                    <div class="col-md-12">
+                      <span style="color: #9eafba;text-decoration: none;font-size: 1.5em;"><i class="fa fa-tag fa-1x"> Filter :</i></span>
+                      <%= link_to "All", documentations_path, :class => "btn btn-primary" %>
+                      <% Category.all.each do |category| %>
+                        <%= link_to category.name, documentations_path(category: category.name), :class => "btn btn-primary" %>
+                      <% end %>
+                      <br>  <br>
+                    </div>
+                   </div>
 
                 <div class="row">
                     <div class="col-md-12">
