--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -50,6 +50,7 @@
                         <thead>
                           <tr>
                             <th>Complete</th>
+                            <th>Priority</th>
                             <th>Title</th>
                             <th>Deadline</th>
                             <th>Tags</th>
@@ -62,17 +63,23 @@
                                        
                                           <% if todo_item.completed? %>
                                          
-                                              <td width="5%" style="vertical-align: middle; text-align:center"><%= link_to incomplete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %><i style="opacity:0.4;" class="fa fa-check"></i><% end %></td>
-                                            
-                                            
-                                              <td style="vertical-align: middle;opacity:0.4"><strike><%= todo_item.content %></strike></td> 
-                                              <td width="10%" style="vertical-align: middle;opacity:0.4"><strike><%= todo_item.deadline %></strike></td> 
-                                              <td width="30%" style="vertical-align: middle;opacity:0.4" ><strike><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></strike></td>
+                                              <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to incomplete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %><i class="fa fa-check" style="opacity:0.4;"> </i><% end %></td>
+                                              
+                                              <% if todo_item.priority=="High" %>
+                                                <td style="vertical-align: middle;opacity:0.4;" width="5%"><button type="button" class="btn btn-danger btn-xs"><strike><%= todo_item.priority %></strike></button></td>
+                                              <% elsif todo_item.priority=="Medium"  %>
+                                                <td style="vertical-align: middle;opacity:0.4;" width="5%"><button type="button" class="btn btn-warning btn-xs"><strike><%= todo_item.priority %></strike></button></td>
+                                              <% else %>
+                                                <td style="vertical-align: middle;opacity:0.4;" width="5%"><button type="button" class="btn btn-primary btn-xs"><strike><%= todo_item.priority %></strike></button></td>
+                                              <% end %>
 
-                                               <td width="5%" style="vertical-align: middle;">
+                                              <td style="vertical-align: middle;opacity:0.4;"><strike><%= todo_item.content %></strike></td> 
+                                              <td width="10%" style="vertical-align: middle;opacity:0.4; text-decoration:line-through;"><%= todo_item.deadline %></td> 
+                                              <td width="30%" style="vertical-align: middle;opacity:0.4;" ><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></td>
+                                              <td width="5%" style="vertical-align: middle;">
                                                   <div class="btn-group">
-                                                  <button type="button" class="btn btn-default btn-xs dropdown-toggle" style="opacity:0.4" data-toggle="dropdown">
-                                                    <i class="fa fa-cog"></i><span class="caret"></span>
+                                                  <button type="button" class="btn btn-default btn-xs dropdown-toggle" style="opacity:0.4;" data-toggle="dropdown">
+                                                    <i class="fa fa-cog"> </i><span class="caret"></span>
                                                   </button>
                                                   <ul class="dropdown-menu" role="menu">
                                                     <li><%= link_to "Edit", edit_todo_list_todo_item_path(@todo_list, todo_item.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit'}%></li>
@@ -80,14 +87,20 @@
                                                   </ul>
                                                 </div>
                                               </td>
-                                            
                                       
                                            
                                           <% else %>
                                            
                                               <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %><i class="fa fa-check"> </i><% end %></td>
-                                         
-                                           
+                                              
+                                              <% if todo_item.priority=="High" %>
+                                                <td style="vertical-align: middle;" width="5%"><button type="button" class="btn btn-danger btn-xs"><%= todo_item.priority %></button></td>
+                                              <% elsif todo_item.priority=="Medium"  %>
+                                                <td style="vertical-align: middle;" width="5%"><button type="button" class="btn btn-warning btn-xs"><%= todo_item.priority %></button></td>
+                                              <% else %>
+                                                <td style="vertical-align: middle;" width="5%"><button type="button" class="btn btn-primary btn-xs"><%= todo_item.priority %></button></td>
+                                              <% end %>
+
                                               <td style="vertical-align: middle;"><%= todo_item.content %></td> 
                                               <td width="10%" style="vertical-align: middle;"><%= todo_item.deadline %></td> 
                                               <td width="30%" style="vertical-align: middle;" ><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></td>
@@ -139,7 +152,41 @@
     "bLengthChange": false,
     "bFilter": true,
     "bInfo": false,
-    "order": [[ 2, "asc" ]],
+    "order": [[ 3, "asc" ]],
+    "columnDefs": [
+       { type: 'date-euro', targets: 3 }
+     ],
     "bAutoWidth": false });
+
     } );
+
   </script>
+
+<script type="text/javascript">
+  jQuery.extend( jQuery.fn.dataTableExt.oSort, {
+    "date-euro-pre": function ( a ) {
+        var x;
+ 
+        if ( $.trim(a) !== '' ) {
+            var frDatea = $.trim(a).split(' ');
+            var frTimea = (undefined != frDatea[1]) ? frDatea[1].split(':') : [00,00,00];
+            var frDatea2 = frDatea[0].split('/');
+            x = (frDatea2[2] + frDatea2[1] + frDatea2[0] + frTimea[0] + frTimea[1] + ((undefined != frTimea[2]) ? frTimea[2] : 0)) * 1;
+        }
+        else {
+            x = Infinity;
+        }
+ 
+        return x;
+    },
+ 
+    "date-euro-asc": function ( a, b ) {
+        return a - b;
+    },
+ 
+    "date-euro-desc": function ( a, b ) {
+        return b - a;
+    }
+} );
+
+</script>
